--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,11 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
   <app-root></app-root>
+  <link href="https://fonts.googleapis.com/css?family=Tenor+Sans" rel="stylesheet" lazyload>
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" lazyload>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" lazyload>
 </body>
 </html>
